--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
   year={2024},
   organization={IEEE},
   selected={true},
-  preview={/assets/publication_preview/MRSIS.gif},
+  preview={MRSIS.gif},
   pdf={https://drive.google.com/file/d/1exUpAsn-DkHwIGlk5raLlJeRcWcuuJa8/view?usp=sharing},
   video={https://youtu.be/LNwvOHTmme0?si=UlLuGsuGHUiJg0eO},
   bibtex_show={true},
