--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,5 +20,45 @@
   pdf={https://drive.google.com/file/d/1exUpAsn-DkHwIGlk5raLlJeRcWcuuJa8/view?usp=sharing},
   video={https://youtu.be/LNwvOHTmme0?si=UlLuGsuGHUiJg0eO},
   bibtex_show={true},
+  abbr = {Conference},
 }
 
+@article{li2024computation,
+  abstract={Searching for targets in 3D environments can be formulated as submodular maximization problems with routing constraints. 
+    However, it involves solving two NP-hard problems: the maximal coverage problem and the traveling salesman problem. 
+    Since the time constraint is critical for search problems, this research proposes a Computation-Aware Search for Multiple Objects (CASMO) algorithm to further consider the computational time in the cost constraints. 
+    Due to the submodularity, the greedy algorithm achieves $\frac{1}{2}\left( {1 - \frac{1}{e}} \right)\overline {OPT} $, where $\overline {OPT} $ is the approximate optimum. 
+    The experiment results show that the proposed algorithm outperforms state-of-the-art approaches in multi-object search.},
+  title={Computation-Aware Multi-object Search in 3D Space using Submodular Tree},
+  author={Li, Yan-Shuo and Tseng, Kuo-Shih},
+  journal={IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={5956--5962},
+  year={2024},
+  organization={IEEE},
+  preview={CASMO.png},
+  pdf={https://drive.google.com/file/d/1JTYnQlG4r47FA0G-bPAn4PqOYY1aSn0t/view?usp=sharing},
+  video={https://youtu.be/o53MOo2CzRg?si=Kcs_hoEQIvDdz-rh},
+  bibtex_show={true},
+  abbr = {Conference},
+}
+
+@article{hsieh2020detection,
+  abstract={The automatic detection of atrial fibrillation (AF) is crucial for its association with the risk of embolic stroke. 
+    Most of the existing AF detection methods usually convert 1D time-series electrocardiogram (ECG) signal into 2D spectrogram to train a complex AF detection system, which results in heavy training computation and high implementation cost. 
+    This paper proposes an AF detection method based on an end-to-end 1D convolutional neural network (CNN) architecture to raise the detection accuracy and reduce network complexity. 
+    By investigating the impact of major components of a convolutional block on detection accuracy and using grid search to obtain optimal hyperparameters of the CNN, we develop a simple, yet effective 1D CNN. 
+    Since the dataset provided by PhysioNet Challenge 2017 contains ECG recordings with different lengths, we also propose a length normalization algorithm to generate equal-length records to meet the requirement of CNN. 
+    Experimental results and analysis indicate that our method of 1D CNN achieves an average F1 score of 78.2%, which has better detection accuracy with lower network complexity, as compared with the existing deep learning-based methods.},
+  title={Detection of atrial fibrillation using 1D convolutional neural network},
+  author={Hsieh, Chaur-Heh and Li, Yan-Shuo and Hwang, Bor-Jiunn and Hsiao, Ching-Hua},
+  journal={Sensors},
+  volume={20},
+  number={7},
+  pages={2136},
+  year={2020},
+  publisher={MDPI},
+  preview={1D-CNN.png},
+  pdf={https://drive.google.com/file/d/1S8-FZzzsiAudajHAzQxXClu5FlWFjbmF/view?usp=sharing},
+  bibtex_show={true},
+  abbr = {Journal},
+}
