--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
     The intersection system is composed of routing and clustering constraints. 
     The experiment results show that the proposed approach outperforms state-of-the-art methods in multi-robot search.},
   title={Multi-robot Search in a 3D Environment with Intersection System Constraints},
-  author={Li, Yan-Shuo and Tseng, Kuo-Shih},
+  author={Li, Yan-Shuo and Kuo-Shih Tseng},
   journal={IEEE International Conference on Robotics and Automation (ICRA)},
   pages={5963--5969},
   year={2024},
