--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,27 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{liMRSM,
+  abstract={The multi-robot search problem is challenging since it involves task allocation, minimal routing, and maximal coverage problems, which are NP-hard.
+    To solve this problem with theoretical guarantees,
+    it is reformulated as the maximal coverage problem subject to the intersection of matroid constraints.
+    The coverage problem is solved by utilizing its submodularity.
+    Additionally, the workload balance is considered to enhance search efficiency.
+    The intersection matroid is composed of a routing constraint and a clustering constraint.
+    The proposed algorithm, Multi-robot Search with Matroid constraints (MRSM), achieves $\frac{1}{3}\widetilde{OPT}$, where $\widetilde{OPT}$ is the optimal performance under spanning-tree structures. 
+    Furthermore, Dynamic MRSM (D-MRSM) and MRSM with Hexagonal Packing (MRSM-Hex) are proposed for unknown and large scale environments, respectively.
+    The experiment results show that the MRSM approaches outperform state-of-the-art methods in terms of expected time to detection in multi-robot search problems and scales effectively for large search spaces.},
+  title={Multi-robot Search in 3D Environments using Submodularity with Matroid Intersection Constraints},
+  author={Li, Yan-Shuo and Tseng, Kuo-Shih},
+  journal={International Journal of Robotics Research (IJRR) (Under review)},
+  pages={},
+  year={2025},
+  organization={},
+  selected={true},
+  preview={MRSM.png},
+  abbr = {Preprint},
+}
+
 @article{li2024multi,
   abstract={Efficient task allocation is a challenge for multi-robot search. 
     The multi-robot search problem is reformulated as submodular maximization subject to intersection system constraints. 
@@ -35,6 +56,7 @@
   pages={5956--5962},
   year={2024},
   organization={IEEE},
+  selected={true},
   preview={CASMO.png},
   pdf={https://drive.google.com/file/d/1JTYnQlG4r47FA0G-bPAn4PqOYY1aSn0t/view?usp=sharing},
   video={https://youtu.be/o53MOo2CzRg?si=Kcs_hoEQIvDdz-rh},
